test/df17AppBuilding/force-app/main/default/objects/Volunteer_Event__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>a non-profit that we're working with/for at this event</description>
    <inlineHelpText>a non-profit that we're working with/for at this event</inlineHelpText>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Volunteer Events</relationshipLabel>
    <relationshipName>Volunteer_Events</relationshipName>
    <type>Lookup</type>
</CustomField>