test/df17AppBuilding/force-app/main/default/objects/Volunteer_Event__c/listViews/Upcoming.listView-meta.xml
<ListView>
    <fullName>Upcoming</fullName>
    <columns>NAME</columns>
    <columns>Partner__c</columns>
    <columns>Start__c</columns>
    <columns>Hours__c</columns>
    <columns>Description__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Start__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Upcoming</label>
</ListView>